fix(partup): fixed some alignment issues

--- a/app/client/stylesheets/components/pu-button.sass
+++ b/app/client/stylesheets/components/pu-button.sass
@@ -52,7 +52,6 @@
 
         &.picon-times,
         &.picon-info
-            font-size: 15px
 
         &.pu-sub-success
             display: block
@@ -269,13 +268,13 @@
         &-avatar
             background-color: transparent
             border-radius: 20px
+            padding-top: 5px
 
             .pu-avatar
                 margin-right: 0
-                width: 40px
-                height: 40px
+                width: 42px
+                height: 42px
                 border: 2px solid darken($color-primary, 10%)
-                vertical-align: sub
 
             &:hover, &:active, &:focus
                 background-color: transparent
