--- a/app/client/stylesheets/components/pu-header.sass
+++ b/app/client/stylesheets/components/pu-header.sass
@@ -31,8 +31,11 @@ $modal-bar-height: 70px
 
         .pu-brand
             display: inline-block
-            margin-top: 17px
+            margin-top: 15px
             margin-bottom: 5px
+
+            @media screen and (min-width: 400px)
+                margin-top: 17px
 
     .pu-button-header
         margin-top: 10px
@@ -49,6 +52,7 @@ $modal-bar-height: 70px
 
 
     > .pu-list
+        padding-right: 8px
         white-space: nowrap
         height: 100%
 
