--- a/app/client/stylesheets/components/pu-sticky-button.sass
+++ b/app/client/stylesheets/components/pu-sticky-button.sass
@@ -13,7 +13,8 @@
     .picon-times
         font-size: 10px
 
-    .picon-info
+    .picon-info,
+    .picon-info-2
         font-size: 14px
 
     &-right
